--- a/curie-weiss-notation-main.tex
+++ b/curie-weiss-notation-main.tex
@@ -139,7 +139,7 @@
 	\begin{equation*}
 		z = \frac{\exp(\beta \mu)}{\Lambda^3},
 	\end{equation*}
-	$\beta = k_{\rm B} T$ the inverse temperature, $k_{\rm B}$ the Boltzmann constant, $T$ the temperature, $\mu$ the chemical potential, $\Lambda = (2\pi\beta\hbar^2/m)^{1/2}$ the de Broglie thermal wavelength, $\hbar$ the Planck constant, $m$ the mass of a particle. In GPF the integration goes over all configurations with $N$ particles and then the summation goes over all positive integer values of $N$.
+	$\beta = 1/(k_{\rm B} T)$ the inverse temperature, $k_{\rm B}$ the Boltzmann constant, $T$ the temperature, $\mu$ the chemical potential, $\Lambda = (2\pi\beta\hbar^2/m)^{1/2}$ the de Broglie thermal wavelength, $\hbar$ the Planck constant, $m$ the mass of a particle. In GPF the integration goes over all configurations with $N$ particles and then the summation goes over all positive integer values of $N$.
 	
 	\begin{mdframed}[linecolor=black,linewidth=1pt,leftline=true]
 		Alternatively, in notation from~\cite{HansenMcDonald13}, the GPF is expressed as [cf. eqs.~(2.4.6) and~(2.3.13)]
@@ -764,13 +764,13 @@
 	\ee
 	
 	The integral representation of $K_0(z)$ is given by
-	\be
-	K_0(z)=\frac1{2\sqrt\pi}\int_{-\infty}^\infty\e^{-\frac{x^2}4}
+	\be\label{KOI}
+	K_0(z)=\frac1{2\sqrt\pi}\int_{-\infty}^\infty {\rm d}x \e^{-\frac{x^2}4}
 	\mbox{exp}\left(\e^{z+ix\sqrt a}\right),
 	\ee
 	or, in the form of a manifestly real integral,
 	\be\label{KOR}
-	K_0(z)=\frac1{2\sqrt\pi}\int_{-\infty}^\infty\e^{-\frac{x^2}4}
+	K_0(z)=\frac1{2\sqrt\pi}\int_{-\infty}^\infty {\rm d}x \e^{-\frac{x^2}4}
 	\mbox{exp}\left[\e^z\cos(x\sqrt a\,)\right]
 	\cos\left[\e^z\sin(x\sqrt a\,)\right].
 	\ee
@@ -779,11 +779,11 @@
 	
 	I have succeeded to calculate the leading $z\to+\infty$ asymptotics only for two integrals
 	\be
-	K_0^{(a)}(z) = \frac1{2\sqrt\pi} \int_{-\infty}^\infty\e^{-\frac{x^2}4}
+	K_0^{(a)}(z) = \frac1{2\sqrt\pi} \int_{-\infty}^\infty {\rm d}x \e^{-\frac{x^2}4}
 	\mbox{exp}\left[\e^z\cos(x\sqrt a\,)\right]\qquad\mbox{and}\qquad
 	\ee
 	\be
-	K_0^{(b)}(z) = \frac1{2\sqrt\pi} \int_{-\infty}^\infty\e^{-\frac{x^2}4}
+	K_0^{(b)}(z) = \frac1{2\sqrt\pi} \int_{-\infty}^\infty {\rm d}x \e^{-\frac{x^2}4}
 	\cos\left[\e^z\sin(x\sqrt a\,)\right]
 	\ee
 	resulting from \eqref{KOR} by deleting one of the last two factors.
