--- a/notation.tex
+++ b/notation.tex
@@ -1,34 +1,42 @@
 \section{Notation}
 
-$\vb r$ - coordinate in three-dimensional space;
+---
 
-$r \equiv \abs{\vb r}$ - absolute value of $\vb r$.
+$V$ - volume;
 
-$\gamma$ - configuration of particles.
+$N_v$ - number of cubic cells in the whole volume $V$;
 
-$W_{N_v}(\gamma)$ - potential energy of the interparticle interaction.
-
-$\Phi_{N_v}(\vb{r}_i, \vb{r}_j)$ - interaction potential between particles (the Curie-Weiss potential).
-
-$J_1$ - characteristic energy for attraction.
-
-$J_2$ - characteristic energy for repulsion.
-
-$a=J_2/J_1$ - ration between attraction and repulsion characteristic energies.
-
-$\Delta_{l}$ - a cubic cell.
+$\Delta_{l}$ - a cubic cell; the $l$-th cubic cell;
 
 $c$ - linear size of a cubic cell.
 
 $v \equiv c^3$ - volume of a cubic cell.
 
-$N_v$ - number of cells in the whole volume.
+$\gamma$ - configuration of particles;
 
-$I_{\Delta_l} (\vb{r})$ - indicator function.
+$\vb r$ - coordinate in three-dimensional space;
 
-$V$ - volume.
+$r \equiv \abs{\vb r}$ - absolute value of $\vb r$;
 
-$N$ - number of particles.
+$\vb{r}_i$ - space coordinate of the $i$-th particle;
+
+$\vb{r}^N \equiv \vb{r}_1, ..., \vb{r}_N$ - space coordinates of particles in a configuration $\gamma$;
+
+$N$, $\abs{\gamma}$ - number of particles in a configuration $\gamma$;
+
+$\Phi_{N_v}(\vb{r}_i, \vb{r}_j)$ - interaction potential between particles (the Curie-Weiss potential);
+
+$J_1$ - characteristic energy for attraction;
+
+$J_2$ - characteristic energy for repulsion;
+
+$a=J_2/J_1$ - ratio between attraction and repulsion characteristic energies;
+
+$W_{N_v}(\gamma)$, $W_{N_v}(\vb{r}^N)$ - potential energy of the interparticle interaction in $\gamma$;
+
+$I_{\Delta_l} (\vb{r})$ - indicator function for a cell $\Delta_{l}$;
+
+---
 
 $\rho$ - particle density.
 
